[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
envy = "0.4.2"
flate2 = "1.0.35"
futures-util = "0.3.31"
serde = "1.0.216"
serde_json = "1.0.134"
solana-account-decoder = "2.1.7"
solana-client = "2.1.7"
solana-sdk = "2.1.7"
spl-associated-token-account = "6.0.0"
spl-token = "7.0.0"
spl-token-2022 = "4.0.0"
tokio = "1.42.0"
url = { version = "2.5.4", features = ["serde"] }
