[package]
name = "scripts"
version = "0.1.0"
edition = "2024"

[dependencies]
async-recursion = "1.1.1"
chrono = "0.4.40"
envy = "0.4.2"
flate2 = "1.1.1"
futures-util = "0.3.31"
serde = "1.0.219"
serde_json = "1.0.140"
solana-account-decoder = "2.2.7"
solana-client = "2.2.7"
solana-sdk = "2.2.2"
spl-associated-token-account = "6.0.0"
spl-token = "8.0.0"
spl-token-2022 = "7.0.0"
tokio = "1.44.2"
url = { version = "2.5.4", features = ["serde"] }
